--- a/sample-app-messaging/package.json
+++ b/sample-app-messaging/package.json
@@ -19,6 +19,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "rollup": "^4.9.1",
+    "@rollup/plugin-node-resolve": "^15.2.3"  
   }
 }
